frontend/src/components/Navigation/MyWallet/myWallet.scss
@use './../../../scss/abstracts' as *;
@use '../../../scss/theme/card' as *;
@use '../../../scss/theme/colors' as *;
@use '../../../scss/theme/links' as *;
@use '../../../scss/layout' as *;

#wallet {
	z-index: 2;
	ul {
		font-weight: 700;

		.name {
			font-weight: $fw-bold;
			text-transform: uppercase;
			font-size: $body-2;
		}

		li.list-item {
			padding-bottom: rem(8);

			&:first-of-type .nav-link {
				&::before {
					content: url($data-svg-prefix + map-get($icons, 'calendar-large'));
				}
			}

			&:nth-of-type(2) .nav-link {
				&::before {
					content: url($data-svg-prefix + map-get($icons, 'star'));
				}
			}
			// &:nth-of-type(3) .nav-link {
			// 	&::before {
			// 		content: url($data-svg-prefix + map-get($icons, 'collectables'));
			// 	}
			// }
			&:nth-of-type(3) .nav-link {
				&::before {
					content: url($data-svg-prefix + map-get($icons, 'paper-plane-large'));
				}
			}
			&:nth-of-type(4) .nav-link {
				&::before {
					content: url($data-svg-prefix + map-get($icons, 'settings'));
				}
			}

			&:last-of-type .nav-link {
				&:focus,
				&:hover,
				&.active {
					background-color: transparent;
					color: $text-muted;
				}
			}
		}

		hr {
			margin: $text-spacer 0px;

			@include breakpoint-min(lg) {
				margin: $text-spacer-xs 0px;
			}
		}

		.nav-link {
			@extend %icon-text-box;
			gap: $gap-sm;
			padding: $nav-link-padding;
			font-size: $body-2;
			margin: $nav-link-margin;
			font-weight: $fw-medium;
			font-family: $font-body;

			@include breakpoint-min(lg) {
				font-size: rem(14);
				padding: rem(10) rem(14);
				margin: 0px;
			}

			&:hover,
			&:focus,
			&.active {
				@include hover-effect();
			}
		}
	}
}

